--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,15 @@ input[type="checkbox"] {
   @apply fill-secondary text-secondary;
 }
 
+.main-cover-blog {
+  /* background: linear-gradient(90deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),url(https://www.etudesk.com/images/cover-about.jpg); */
+  background: url("../../images/main-cover-blog.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0% 70%;
+  @apply bg-slate-200;
+}
+
 /** ----------------------------- Contact Page ----------------------------- **/
 
 .main-cover-contact {
